--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-keras==2.1.6
-tensorflow-gpu==1.12
+keras==2.2.4
+tensorflow-gpu==1.14.0
+tensorflow-graphics-gpu==1.14.0
 numpy==1.16.3
-opencv-python==3.4.3.18
+opencv-contrib-python==3.4.3.18
 tqdm
 matplotlib
