--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-keras==2.2.4
-tensorflow-gpu==1.14.0
-tensorflow-graphics-gpu==1.14.0
-numpy==1.16.3
-opencv-contrib-python==3.4.3.18
-tqdm
+# General requierements
+numpy
+opencv-python
 matplotlib
+tqdm
+
+# Requirements for code in torch/
+torch
+h5py
+torchvision
+torchsummary
+
+# Requirements for code in py/
+keras
+tensorflow-gpu==1.14.0
